# Pico900

./: #picopts.c#  #test.c#  .#pico900.c  .#picopts.c  .gitignore  CMakeLists.txt  CMakeLists.txt~  Pico 920M Emulator.docx  README.md  load.sh  loadm.sh  pico900.c  pico900.c.bak  pico900.cfg  pico900.c~  pico900_emu.c  pico900_test.c  pico900m.cfg  terminal.sh  terminalm.sh  test.c
pico900/: CMakeLists.txt
